--- a/playbook_pingtest.yml
+++ b/playbook_pingtest.yml
@@ -1,7 +1,7 @@
 ---
 -
  name: "Test connectivity to target servers"
- hosts: centcmd, centmaster, 192.168.1.241
+ hosts: centcmd, centmaster, centgnu
  tasks:
   -
    name: Ping Test
