--- a/playbook-pingtest.yaml
+++ b/playbook-pingtest.yaml
@@ -1,6 +1,6 @@
 -
     name: Test connectivity to target servers
-    hosts: all
+    hosts: vmx
     tasks:
         -    name: Ping test
              ping:
