--- a/playbook-Add_Username.yml
+++ b/playbook-Add_Username.yml
@@ -1,7 +1,7 @@
 ---
 - hosts: Juniper
   roles:
-    - "/root/.ansible/roles/juniper.junos"
+    - juniper.junos
   connection: local
   gather_facts: no
   tasks:
